@startuml

'Hide empty parts:
hide empty fields
hide empty methods

'You can find more examles at https://plantuml.com/class-diagram

node SecHub {
}


node InfralightPDS as "Infralight PDS" {

	database filesystem {
	
	}
	node script as "Infralight launcher script" {
	}


	component product1 {
	}
	
	component product2 {
	}
	script --> product1 : calls (1a)
	script --> product2 : calls (1b)
	script --> wrapper : calls (2)
	
	product1 ....> filesystem
	product2 ....> filesystem
	wrapper <....> filesystem


	node wrapper {
	
		class SarifSchema {
		}
	
		class InfralightProductImporter {
		}
		
		
		class InfralightProductImportFilter {
		}
		
		InfralightProductImporter -> GenericInfrascanFinding : imports 
		InfralightProductImportFilter ..> GenericInfrascanFinding : filters
		
		InfralighProductImportService --> InfralightProductImportStringDataProvider : reads stringdata (1)
		InfralighProductImportService --> InfralightProductImporter : uses (2)
		InfralighProductImportService -> InfralightProductImportFilter: uses (3)
	}

}

SecHub ---> InfralightPDS
 
@enduml
